# crow_core

./: app.hpp  authentication.hpp  bmcweb_config.h  command_line_parser.hpp  crow_core.cpp  http_client.cpp  http_connection.hpp  http_response.hpp  json_html_serializer.cpp  json_html_serializer.hpp  logging.hpp  meson.build  meson_options.txt  plugintest.cpp  reactortest.cpp  sessions.hpp  ssl_key_handler.hpp  utility.hpp
http/: app.hpp  complete_response_fields.hpp  http_base64_file_body.hpp  http_client.hpp  http_connection.hpp  http_request.hpp  http_response.hpp  http_server.hpp  http_types.hpp  http_utility.hpp  routing.hpp  utility.hpp  web_client.hpp
include/: bmcweb_config.h  error_messages.hpp  shared_library.hpp
plugin-ifaces/: bmcweb-plugin.hpp  plugin-defs.hpp  router-plugin.h
redfish_event/: meson.build
redfish_event/event_manager/: event_manager.hpp
redfish_event/http/: http_client.hpp  http_client_pool.hpp  http_subscriber.hpp
redfish_event/logger/: logger.hpp
redfish_event/src/: error_messages.cpp  redfish_event.cpp
subprojects/: reactor.wrap
tests/: meson.build
tests/http_connection_test/: http_connection_test.cpp  meson.build  root_certificates.hpp  simple_client.hpp  testapp.hpp
tests/http_response_test/: http_response_test.cpp  meson.build
