option('example',
  type : 'boolean',
  value : false,
  description : 'Here is a sample option'
)

option('enable-tests',
  type : 'boolean',
  value : false,
  description : 'Enables tests.'
)

option('enable-benchmarks',
  type : 'boolean',
  value : false,
  description : 'Enables benchmarks.'
)